# HarvestHomestead

./: Dockerfile  README.md  db.sqlite3  fly.toml  pyproject.toml
harvest/: asgi.py  settings.py  urls.py  wsgi.py
main_app/: admin.py  forms.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_alter_animal_user_farm.py  0003_alter_animal_user.py  0004_comment.py  0005_photo.py  0006_equipment_crops.py  0007_comment_animal_comment_crop_comment_equipment.py  0008_rename_crops_crop.py  0009_alter_crop_growing_season.py  0010_rename_water_dependancy_crop_water_dependency.py  0011_rename_optimal_growing_conditions_crop_hardiness_zone_and_more.py  0012_remove_animal_user_animal_user.py  0013_remove_crop_user_remove_equipment_user_crop_user_and_more.py  0014_remove_comment_vote_remove_equipment_fuel_type_and_more.py
main_app/static/css/: style.css
main_app/templates/: about.html  base.html  home.html
main_app/templates/animals/: detail.html  index.html
main_app/templates/crops/: detail.html  index.html
main_app/templates/equipment/: detail.html  index.html
main_app/templates/main_app/: animal_form.html  crop_form.html  crops_form.html  equipment_form.html
main_app/templates/registration/: farm.html  login.html  signup.html
main_app/templates/user/: profile.html
