[tool.poetry]
name = "harvest"
version = "0.1.0"
description = ""
authors = ["nicodenelliGH <ndm9412@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
dj-database-url = "^1.3.0"
daphne = "^4.0.0"
psycopg2-binary = "^2.9.6"
boto3 = "^1.26.116"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
